New version 1.4.29: =================== - added mapping rules for combined spectra